fix(style): fix a11y color contrast

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,21 +19,41 @@
   --ifm-font-family-base: 'Nacelle', system-ui, -apple-system, sans-serif;
   --ifm-heading-font-family: 'Nacelle', system-ui, -apple-system, sans-serif;
   --ifm-font-family-monospace: 'IBM Mono';
+  --plane-text-color: rgb(255, 255, 255, 0.87);
+  --color-neutral-400: oklch(71.7% .0116 230.89);
+  --color-neutral-500: oklch(58.24% .0161 231.06);
+  --color-neutral-600: oklch(47.52% .0127 231.05);
+  --color-brand-25: oklch(98.54% .0085 230.78);
+  --color-brand-900: oklch(20.77% .044 234.86);
+  --color-brand-950: oklch(17.92% .0365 231.95);
+  --ifm-footer-background-color: var(--color-brand-950);
+  --plane-footer-background-color: var(--color-brand-950);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --ifm-navbar-search-input-icon: url('data:image/svg+xml;utf8,<svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" height="16px" width="16px"><path d="M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609,0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021,0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338,4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z" /></svg>');
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #006399;
-  --ifm-color-primary-dark: #1b47c2;
-  --ifm-color-primary-darker: #1941b1;
-  --ifm-color-primary-darkest: #153693;
-  --ifm-color-primary-light: #2257ed;
-  --ifm-color-primary-lighter: #3e6ef0;
-  --ifm-color-primary-lightest: #557ef2;
+html[data-theme='dark'] {
+  --ifm-color-primary-lightest: #aad6ee;
+  --ifm-color-primary-lighter: #7fc2e6;
+  --ifm-color-primary-light: #55addd;
+  --ifm-color-primary: #3fa3d9;
+  --ifm-color-primary-dark: #2892cc;
+  --ifm-color-primary-darker: #195c80;
+  --ifm-color-primary-darkest: #113d55;
+
+  --ifm-heading-color: #e0e4ec;
+  --ifm-background-color: var(--color-brand-900);
+  --ifm-footer-background-color: var(--color-brand-950);
+  --ifm-footer-link-color: var(--color-neutral-500);
+  --plane-footer-background-color: var(--color-brand-950);
+  --plane-footer-link-color: var(--color-neutral-400);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
   --ifm-navbar-search-input-icon: url('data:image/svg+xml;utf8,<svg fill="%23ebebeb99" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" height="16px" width="16px"><path d="M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609,0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021,0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338,4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z" /></svg>');
+}
+
+.theme-layout-main {
+  padding-bottom: 40px;
 }
 
 @media (min-width: 1536px) {
@@ -52,8 +72,9 @@
   background-color: rgb(250 250 250);
 }
 
+[data-theme='dark'] body,
 [data-theme='dark'] .navbar {
-  background-color: #1b1b1d;
+  background-color: var(--ifm-background-color);
 }
 
 .navbar__toggle {
@@ -88,7 +109,7 @@
 }
 
 [data-theme='dark'] .menu__link {
-  color: rgb(235, 235, 235, 0.6);
+  color: var(--color-neutral-400);
   font-size: 13px;
   font-weight: 500;
   align-items: center;
@@ -106,13 +127,14 @@
   letter-spacing: -0.01em;
   line-height: 16px;
   transition: opacity 0.2s ease-out;
-  color: rgba(60, 60, 60, 0.7);
+  /* color: rgba(60, 60, 60, 0.7); */
+  color: var(--color-neutral-600);
 }
 
 .menu__link--active:not(.menu__link--sublist) {
   font-weight: 600;
   transition: color 0.25s;
-  color: #006399;
+  color: var(--ifm-color-primary);
   font-size: 13px;
   border-left-style: solid;
   border-left-width: 4px;
@@ -122,13 +144,13 @@
 [data-theme="dark"] a,
 [data-theme="dark"] .menu__link--active:not(.menu__link--sublist),
 [data-theme="dark"] .breadcrumbs__item--active .breadcrumbs__link {
-  color: #2690C9;
+  color: var(--ifm-color-primary);
 }
 
 .menu__link--active:is(.theme-doc-sidebar-item-category-level-2 > .menu__list-item-collapsible > .menu__link--sublist) {
   font-weight: 600;
   transition: color 0.25s;
-  color: #006399;
+  color: var(--ifm-color-primary);
   font-size: 13px;
   border-left-style: solid;
   border-left-width: 4px;
@@ -287,7 +309,7 @@ h3.description {
 }
 
 #__docusaurus>nav>div.navbar__inner>div.navbar__items.navbar__items--right>a:nth-child(4) {
-  background-color: #006399;
+  background-color: var(--ifm-color-primary);
   border-radius: 8px;
   color: #f3f5f7;
   font-size: 0.75rem;
@@ -298,6 +320,11 @@ h3.description {
   text-transform: capitalize;
   white-space: nowrap;
   line-height: 1.25rem;
+}
+
+[data-theme="dark"] #__docusaurus>nav>div.navbar__inner>div.navbar__items.navbar__items--right>a:nth-child(4) {
+  /* background-color: var(--ifm-color-primary-dark); */
+  color: var(--ifm-color-emphasis-800);
 }
 
 #__docusaurus>nav>div.navbar__inner>div.navbar__items.navbar__items--right>a>svg {
@@ -474,7 +501,7 @@ html[data-theme="dark"] .one {
 }
 
 .card:hover {
-  border: 1px solid #006399;
+  border: 1px solid var(--ifm-color-primary);
 }
 
 .card-icon {
@@ -486,7 +513,7 @@ html[data-theme="dark"] .one {
 }
 
 .icon-style {
-  color: #006399;
+  color: var(--ifm-color-primary);
 }
 
 .card-title {
@@ -498,6 +525,10 @@ html[data-theme="dark"] .one {
 
 .card-description {
   font-size: 14px;
+}
+
+[data-theme="dark"] .card-description {
+  color: var(--ifm-heading-color);
 }
 
 .card-link {
@@ -542,15 +573,15 @@ h6 {
 [data-theme='dark'] h4,
 [data-theme='dark'] h5,
 [data-theme='dark'] h6 {
-  color: rgb(224 228 236);
+  color: var(--color-brand-25);
 }
 
 html[data-theme='dark'] {
-  color: rgb(255, 255, 255, 0.87);
+  color: var(--color-brand-25);
 }
 
 [data-theme='dark'] blockquote {
-  color: rgb(255, 255, 255, 0.87);
+  color: var(--color-brand-25);
 }
 
 [data-theme='dark'] code {
@@ -561,12 +592,12 @@ html[data-theme='dark'] {
   color: rgb(243 246 251);
 }
 
-[data-theme='dark'] .table-of-contents__link {
-  color: rgb(235, 235, 235, 0.6);
+[data-theme='dark'] .table-of-contents a {
+  color: var(--color-neutral-400);
 }
 
 .table-of-contents__link {
-  color: rgba(60, 60, 60, 0.7);
+  color: var(--color-neutral-600);
 }
 
 @media (min-width: 768px) {
@@ -775,6 +806,21 @@ html:not([data-theme]) .themedComponent--light_NVdE {
 
 [data-theme='dark'] .clean-btn {
   color: rgb(159 160 160);
+}
+
+a.footer__link-item {
+  color: var(--ifm-footer-link-color);
+  text-decoration: none;
+  font-size: 0.8rem;
+}
+
+a.footer__link-item:hover {
+  text-decoration: underline;
+}
+
+[data-theme='dark'] .footer--dark {
+  --ifm-footer-background-color: var(--plane-footer-background-color);
+  --ifm-footer-link-color: var(--plane-footer-link-color);
 }
 
 @media (min-width: 1455px) {
